plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://repo.jenkins-ci.org/releases/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

jar {
    enabled = true
}

shadowJar {
    archiveClassifier = ''
    zip64 = true
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'com.qi4l.JYso.Starter'
    }
}

configurations.configureEach {
    exclude group: 'ch.qos.logback', module: 'logback-classic'
    exclude group: 'ch.qos.logback', module: 'logback-core'
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    implementation 'cn.hutool:hutool-all:5.7.7'
    implementation 'com.alibaba:fastjson:1.2.83'
    implementation 'com.beust:jcommander:1.78'
    implementation 'com.caucho:resin:4.0.65'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
    implementation 'com.mchange:c3p0:0.9.5.5'
    implementation 'com.nqzero:permit-reflect:0.3'
    implementation 'com.teradata.jdbc:terajdbc:20.00.00.06'
    implementation 'com.unboundid:unboundid-ldapsdk:4.0.9'
    implementation 'com.vaadin:vaadin-server:7.7.14'
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'io.undertow:undertow-core:2.2.2.Final'
    implementation 'io.undertow:undertow-servlet:2.2.2.Final'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.apache.click:click-nodeps:2.3.0'
    implementation 'org.apache.commons:commons-collections4:4.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.myfaces.core:myfaces-impl:2.2.9'
    implementation 'org.apache.tomcat:tomcat-catalina:9.0.83'
    implementation 'org.apache.tomcat:tomcat-websocket:9.0.83'
    implementation 'org.apache.wicket:wicket-util:6.23.0'
    implementation 'org.aspectj:aspectjweaver:1.9.7'
    implementation 'org.beanshell:bsh:2.0b5'
    implementation 'org.clojure:clojure:1.8.0'
    implementation 'org.codehaus.groovy:groovy:2.5.23'
    implementation 'org.fusesource.jansi:jansi:2.4.0'
    implementation 'org.hibernate:hibernate-core:4.3.11.Final'
    implementation 'org.javassist:javassist:3.29.2-GA'
    implementation 'org.jboss.interceptor:jboss-interceptor-spi:2.0.0.Final'
    implementation 'org.jboss.remoting:jboss-remoting:4.0.19.Final'
    implementation 'org.jboss.remotingjmx:remoting-jmx:2.0.1.Final'
    implementation 'org.jboss.weld:weld-core:1.1.33.Final'
    implementation 'org.jenkins-ci.main:remoting:2.55'
    implementation 'org.ow2.asm:asm:8.0.1'
    implementation 'org.python:jython-standalone:2.5.2'
    implementation 'org.reflections:reflections:0.9.10'
    implementation 'org.springframework:spring-aop:5.3.31'
    implementation 'org.springframework:spring-beans:5.3.31'
    implementation 'org.springframework:spring-context-support:5.3.31'
    implementation 'org.springframework:spring-core:5.3.31'
    implementation 'org.springframework:spring-tx:5.3.31'
    implementation 'rhino:js:1.7R2'
    implementation 'rome:rome:1.0'
    implementation 'xerces:xercesImpl:2.12.0'

    implementation files('libs/jai-core-1.1.3.jar')
    implementation files('libs/weblogic-server.jar')

    dependencies {
        implementation('commons-collections:commons-collections') {
            version {
                strictly '3.2.1'
            }
        }
        implementation('org.apache.commons:commons-collections4') {
            version {
                strictly '4.0'
            }
        }
    }

    implementation 'commons-configuration:commons-configuration:1.10'
    implementation 'com.thoughtworks.xstream:xstream:1.4.9'
    implementation 'com.rometools:rome:1.7.0'
    implementation 'net.sf.json-lib:json-lib:2.4:jdk15'

    implementation 'commons-beanutils:commons-beanutils:1.9.4'

    implementation 'org.eclipse.jetty:jetty-server:9.4.51.v20230217'
    implementation 'org.eclipse.jetty:jetty-servlet:9.4.51.v20230217'
    implementation 'org.eclipse.jetty:jetty-util:9.4.51.v20230217'

}


group = 'org.example'
version = '1.3.8'
description = 'JYso'
java.sourceCompatibility = JavaVersion.VERSION_1_8

compileJava {
    options.compilerArgs << '-XDignore.symbol.file'
    options.fork = true
    options.forkOptions.executable = '/Users/qi4l/env/amazon-corretto-8.jdk/Contents/Home/bin/javac'
}